# binance-crypto-db

./: .gitignore  Cargo.toml  DATASET.md  GEMINI.md  README.md  package-lock.json
.zed/: debug.json  launch.json  tasks.json
crates/common/: Cargo.toml
crates/common/src/: actors.rs  lib.rs
crates/common/src/models/: aggtrade.rs  force_order.rs  kline.rs  markprice.rs  mod.rs  open_interest.rs  orderbook.rs
crates/executor/: Cargo.toml
crates/executor/src/: main.rs
crates/executor/src/actors/: mod.rs  supervisor.rs
crates/executor/src/services/: execution_service.rs  mod.rs  telegram_service.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: lib.rs  traits.rs
crates/market_data/src/remote/: aggtrade_response.rs  binance_poller.rs  forceorder_response.rs  kline_response.rs  markprice_response.rs  mod.rs  openinterest_response.rs  orderbook_response.rs
crates/market_data/src/services/: aggtrade_service.rs  forceorder_service.rs  klines_service.rs  market_gateway.rs  markprice_service.rs  mod.rs  openinterest_service.rs  orderbook_service.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: schema.sql
crates/storage/src/: data_manager.rs  db.rs  lib.rs  symbol_manager.rs
crates/storage/src/actors/: backup_actor.rs  mod.rs
crates/storage/src/repositories/: aggtrade_repo.rs  forceorder_repo.rs  klines_repo.rs  markprice_repo.rs  mod.rs  openinterest_repo.rs  orderbook_repo.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
crates/strategy/src/services/: mod.rs  strategy_service.rs
migrations/2025-12-12-013432-0000_create_order_books/: down.sql  up.sql
migrations/2025-12-14-012948-0000_create_agg_trades/: down.sql  up.sql
models/: strategy.onnx
my_migration/: pg_to_sl.py
sql/: schema.sql
src/: aggtrade_recorder.rs  db.rs  legacy_remote.rs  logger.rs  main.rs  models.rs  new_orders_buffer.rs  remote.rs  router.rs  schema.rs
src/actors/: mod.rs  supervisor.rs
src/inference/: mod.rs
src/models/: aggtrade.rs  kline.rs  mod.rs  orderbook.rs  signal.rs
src/remote/: aggtrade_response.rs  binance_client.rs  kline_response.rs  mod.rs  orderbook_response.rs
src/repositories/: aggtrade_repo.rs  klines_repo.rs  mod.rs  orderbook_repo.rs
src/services/: aggtrade_service.rs  execution_service.rs  klines_service.rs  market_gateway.rs  mod.rs  orderbook_service.rs  strategy_service.rs
systemd/: binance-mock.service  binance-trader.service
test/: Containerfile.riscv  compose.yml  mock_server.py
training/: Containerfile  requirements.txt  run_container.sh  train_model.py  train_real_data.py
utils/: dump_db.sh  setup_systemd.sh
