[package]
name = "binance-crypto-db"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
libsqlite3-sys = { version = "^0.30.1", features = ["bundled"] }
ndarray = "0.17.1"
openssl = { version = "0.10.75", features = ["vendored"] }
polars = { version = "0.44.0", features = ["lazy", "temporal", "default"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono", "rust_decimal"] }
ta = "0.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls-vendored"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tract-onnx = "0.22.0"
zstd = { version = "0.13.3", default-features = false, features = ["experimental"] }
teloxide = { version = "0.13", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0.100"
async-trait = "0.1.89"

[dev-dependencies]
mockall = "0.14.0"
