[workspace]
members = [
    "crates/common",
    "crates/market_data",
    "crates/storage",
    "crates/strategy",
    "crates/executor",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono", "rust_decimal"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls-vendored"] }
polars = { version = "0.44.0", features = ["lazy", "temporal", "default"] }
tract-onnx = "0.22.0"
ndarray = "0.17.1"
ta = "0.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
url = "2.5.0"
dotenvy = "0.15.7"
teloxide = { version = "0.13", features = ["macros"] }
libsqlite3-sys = { version = "^0.30.1", features = ["bundled"] }

[profile.release]
lto = "fat"
codegen-units = 1
