[package]
name = "market_data"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
storage = { path = "../storage" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
