[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libsqlite3-sys = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
