[package]
name = "strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tract-onnx = { workspace = true }
ndarray = { workspace = true }
ta = { workspace = true }
polars = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
